--- a/ProducerApplication/src/main/resources/application.properties
+++ b/ProducerApplication/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 # Kafka
-spring.kafka.bootstrap-servers=192.168.160.88:9092
-dekart.kafka.groupId=descartes
+spring.kafka.bootstrap-servers=
+dekart.kafka.groupId=
